--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio Website</title>
 </head>
 
 <body>
     <div id="wrapper">
         <div class="container">
+
+            <!-- Navbar -->
             <nav class="navbar">
                 <!-- Logo Container -->
                 <div class="logo-container">
@@ -88,13 +91,50 @@
                         width="345">
                     </div>
                 </div>
+             </div>
+
+            <!-- Project Section -->
+            <div class="project-section">
+                <h2 class="page-header">Projects</h2>
+
+                <div class="project-container">
+                    <div class="project-card" id="project1">
+                        <div class="project-number" id="project-number-2"></div>
+                        <div class="project-content">
+                            <div class="project-skills-container">
+                                <img class="project-skill" src="assests/HTML.png" alt="" >
+                                <img class="project-skill" src="assests/CSS.png" alt="" >
+                                <img class="project-skill" src="assests/Javascript.svg" alt="" >
+                                <img class="project-skill" src="assests/Express.png" alt="" >
+                                <img class="project-skill" src="assests/NextJsCircle.png" alt="" >
+                                <img class="project-skill" src="assests/Tailwind.png" alt="" >
+                                <img class="project-skill" src="assests/NodeJs.svg" alt="" >
+                                <img class="project-skill" src="assests/MongoDB.svg" alt="" >
+                                <img class="project-skill" src="assests/Redux.svg" alt="" >
+                                <img class="project-skill" src="assests/Redux.svg" alt="" >
+                            </div>
+                            <div class="project-heading">Tint & Orange</div>
+                            <div class="project-sub-heading">
+                                Its is a car modification copany which provide you sheets to protect your car from scratch
+                            </div>
+                            <div class="btn-grp">
+                                <button class="btn-pink btn-project">Read More</button>
+                                <a href="">
+                                    <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                                    <i title="Live Link" class="fa-solid fa-link icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+
             </div>
         </div>
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
   <script>
     var typeData = new Typed(".role", {
